add geoip whitelist config file to ghpages

--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -8,5 +8,7 @@
 <a href="whitelist.conf" target="_blank">whitelist.conf</a>
 <p>
 <a href="gfwlist.conf" target="_blank">gfwlist.conf</a>
+<p>
+<a href="geoip_whitelist.conf" target="_blank">geoip_whitelist.conf</a>
 </body>
 </html>
