--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -10,5 +10,7 @@
 <a href="gfwlist.conf" target="_blank">gfwlist.conf</a>
 <p>
 <a href="geoip_whitelist.conf" target="_blank">geoip_whitelist.conf</a>
+<p>
+<a href="cn.conf" target="_blank">cn.conf</a>
 </body>
 </html>
